--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h1, h2, h3, p {
   text-align: center;
 }
 
+#scores-div h2 {
+  line-height: 0.6em;
+}
+
 #board {
   margin: 0 auto;
   height: 300px;
@@ -30,4 +34,15 @@ h1, h2, h3, p {
 
 #board button.winning-series {
   background-color: lightgreen;
+}
+
+form {
+  display: block;
+  text-align: center;
+  background-color: whitesmoke;
+  padding: 20px;
+}
+
+.hidden {
+  display: none;
 }
